--- a/index.html
+++ b/index.html
@@ -3,16 +3,40 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap link -->
     <link rel="stylesheet" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
-
-    <title>TO DO List App</title>
+    <!-- Custom Font links -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <!-- Custom CSS link -->
+    <link rel="stylesheet" href="style.css">
+    <title>To Do List App</title>
 </head>
 
 <body>
-
+    <nav class="nav navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a href="#" class="navbar-brand">To Do List</a>
+            </div>
+        </div>
+    </nav>
+    
+    <div id="list-action">
+        <div id="container">
+            <h1>To Do List <i class="fa fa-minus"></i></h1>
+            <input class="input-box" type="text" placeholder="Add your tasks here!">
+            <ul>
+                <li><span><i class="fa fa-trash"></i></span>Learn HTML</li>
+                <li><span><i class="fa fa-trash"></i></span>Learn CSS</li>
+                <li><span><i class="fa fa-trash"></i></span>Learn JavaScript</li>
+                <li><span><i class="fa fa-trash"></i></span>Practice by doing projects</li>
+            </ul>
+        </div>
+        
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"></script>
-
+    <script src="app.js"></script>
 <script>
 
 </script>
